--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,4 @@
-name: MobTags-LEET.CC
+name: MobTags
 author: xXSirButterXx
 version: 1.0.0
 description: MobTags, the NPC plugin for PocketMine/Genisys
